--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -400,7 +400,7 @@
     <a href="https://casa2025.sciencesconf.org/?lang=en" target="_blank">CASA</a>
     |
 <!-- Computational Linguistics -->
-    <a href="" target="_blank">AACL</a>
+    <a href="https://www.afnlp.org/conferences/ijcnlp2025/" target="_blank">IJCNLP-AACL</a>
     |
     <a href="http://cips-cl.org/static/CCL2025/cclEssay/notice/index.html" target="_blank">CCL</a>
     |
