--- a/pages/publications.html
+++ b/pages/publications.html
@@ -159,11 +159,10 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
+    <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/forum?id=nbY3ZaoiDC"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a>. The 63th Annual Meeting of the Association for Computional Linguistics (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">ACL-25</font></u></strong></a>). Vienna, Austria, July 27th-August 1st, 2025.
+
+
     <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025. (Best Paper Award)
-
-
-    <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/forum?id=nbY3ZaoiDC"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Under review
-
 
     <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
     <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
