--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -491,6 +491,14 @@
     | 
     <a href="https://mp.weixin.qq.com/s?__biz=Mzg2NjE3NzkzNQ==&mid=2247485384&idx=1&sn=dd59eb32bb36a0a80aacd37cb3ee5a20&chksm=cf8b6bc8c2b196b42809f751fa724ef931cf9d2cb81da51d8c7ae8f9086c7022da6c352399fe&mpshare=1&scene=23&srcid=0516C3Lr6RKfXStE1Hz2DLDQ&sharer_shareinfo=b4445aa0cdd2039c73574ef509fb5700&sharer_shareinfo_first=b4445aa0cdd2039c73574ef509fb5700#rd" target="_blank">中国科学院软件研究所中文实验室多篇论文被ACL 2025及ICML 2025录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/JXD7hcQo2AH1TnGY30dp4A" target="_blank">北京讯飞研究院4篇论文被ACL 2025录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Bb6ZhnpkZbBzUxyHA2h9fw" target="_blank">新闻动态 | 实验室共14项新工作入选国际自然语言处理顶会ACL2025</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/dzosY6t9OSRlCkzVHCtHRw" target="_blank">哈工大SCIR 29篇长文被ACL 2025主会/Findings录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/98ums3yz6QOe0TtAoxy52A" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议ACL 2025录用</a>
+    | 
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
