--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -498,7 +498,14 @@
     <a href="https://mp.weixin.qq.com/s/dzosY6t9OSRlCkzVHCtHRw" target="_blank">哈工大SCIR 29篇长文被ACL 2025主会/Findings录用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/98ums3yz6QOe0TtAoxy52A" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议ACL 2025录用</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/x-6px3nrH2lk1vP77bgo7g" target="_blank">苏大NLP团队和合作单位40篇论文被ACL2025主会/Findings录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/g9foob4QzITPPqUfD273sw" target="_blank">AML Lab 7 篇论文被国际学术会议ACL 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lPf3BTyFG4p1b-8SlC-s6A" target="_blank">实验室两篇论文被ACL 2025接收</a>
+    |
+     
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
