--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -505,7 +505,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/lPf3BTyFG4p1b-8SlC-s6A" target="_blank">实验室两篇论文被ACL 2025接收</a>
     |
-     
+    <a href="https://mp.weixin.qq.com/s/W9gL7A3cyAKHm5_B05U6bA" target="_blank">快讯｜北邮GAMMA LAB的五篇工作被KDD 2025录用</a>
+    |
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
