--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -219,6 +219,31 @@
 <!-- Bioinformatics and Biomedicine - B-->
     <a href="" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
     |
+<!-- semantic web - B-->
+    <a href="" target="_blank">EMNLP</a>
+    |
+    <a href="" target="_blank">NAACL</a>
+    |   
+    <a href="" target="_blank">ISWC</a>
+    |
+    <a href="" target="_blank">COLING</a>
+    |
+    <a href="" target="_blank">ECML-PKDD</a>
+    |
+    <a href="" target="_blank">ICME</a>
+    |
+    <a href="" target="_blank">ICMR</a>
+    |
+    <a href="https://attend.ieee.org/wcci-2026/" target="_blank">IJCNN</a>
+    |
+    <a href="" target="_blank">ICANN</a>
+    |
+    <a href="https://www.pakdd2026.org/" target="_blank">PAKDD</a>
+    |
+    <a href="" target="_blank">ECIR</a>
+    |
+    <a href="" target="_blank">UIC</a>
+    |
 <br/>
 
 <h4>2025</h4>
