--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/uqddWNzaOo2-j9X8PKm32g" target="_blank">8个专委自办学术会议入选CCF高质量国际学术会议培育计划</a>
   |
-  <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
+  <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录（2025）</a>
   |
   <a href="https://mp.weixin.qq.com/s/3MH0Rl1yfuxSWwyrCJsJYQ" target="_blank">T2| 《计算机教育》入选CCF高质量科技期刊分级目录</a>
   |
