--- a/pages/activities.html
+++ b/pages/activities.html
@@ -323,6 +323,10 @@
     </li>
 
 
+<!-- 2025.07.23 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Knowledge and Data Engineering (<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69"><strong><u><font color="#874e26">IEEE TKDE</font></u></strong></a>)</li>
+
+
 <!-- 2025.01.20 收到审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Systems, Man and Cybernetics: Systems (<a href="https://ieeexplore.ieee.org/xpl/topics.jsp?punumber=6221021"><strong><u><font color="#874e26">IEEE TSMC-S</font></u></strong></a>)</li>
 
