--- a/pages/activities.html
+++ b/pages/activities.html
@@ -323,8 +323,16 @@
     </li>
 
 
+<!-- 2025.07.21 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Artificial Intelligence (<a href="https://cis.ieee.org/publications/ieee-transactions-on-artificial-intelligence"><strong><u><font color="#874e26">IEEE AI</font></u></strong></a>)</li>
+
+
 <!-- 2025.07.23 收到审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Knowledge and Data Engineering (<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69"><strong><u><font color="#874e26">IEEE TKDE</font></u></strong></a>)</li>
+
+
+<!-- 2025.07.18 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, ACM Transactions on Knowledge Discovery from Data (<a href="https://dl.acm.org/journal/tkdd"><strong><u><font color="#874e26">ACM TKDD</font></u></strong></a>)</li>
 
 
 <!-- 2025.01.20 收到审稿邀请 -->
