--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -244,6 +244,9 @@
     |
     <a href="" target="_blank">UIC</a>
     |
+<!-- NLP -->
+    <a href="https://lrec2026.info/" target="_blank">LREC</a>
+    |
 <br/>
 
 <h4>2025</h4>
@@ -516,8 +519,6 @@
     | 
     <a href="https://mp.weixin.qq.com/s?__biz=Mzg2NjE3NzkzNQ==&mid=2247485384&idx=1&sn=dd59eb32bb36a0a80aacd37cb3ee5a20&chksm=cf8b6bc8c2b196b42809f751fa724ef931cf9d2cb81da51d8c7ae8f9086c7022da6c352399fe&mpshare=1&scene=23&srcid=0516C3Lr6RKfXStE1Hz2DLDQ&sharer_shareinfo=b4445aa0cdd2039c73574ef509fb5700&sharer_shareinfo_first=b4445aa0cdd2039c73574ef509fb5700#rd" target="_blank">中国科学院软件研究所中文实验室多篇论文被ACL 2025及ICML 2025录用</a>
     |
-    <a href="https://mp.weixin.qq.com/s/JXD7hcQo2AH1TnGY30dp4A" target="_blank">北京讯飞研究院4篇论文被ACL 2025录用</a>
-    | 
     <a href="https://mp.weixin.qq.com/s/Bb6ZhnpkZbBzUxyHA2h9fw" target="_blank">新闻动态 | 实验室共14项新工作入选国际自然语言处理顶会ACL2025</a>
     | 
     <a href="https://mp.weixin.qq.com/s/dzosY6t9OSRlCkzVHCtHRw" target="_blank">哈工大SCIR 29篇长文被ACL 2025主会/Findings录用</a>
@@ -530,7 +531,11 @@
     |
     <a href="https://mp.weixin.qq.com/s/lPf3BTyFG4p1b-8SlC-s6A" target="_blank">实验室两篇论文被ACL 2025接收</a>
     |
+    <a href="https://mp.weixin.qq.com/s/B_CHJTuuoEMGmR79VsN1Yw" target="_blank">知识工场多篇论文在ACL 2025发表</a>
+    |    
     <a href="https://mp.weixin.qq.com/s/W9gL7A3cyAKHm5_B05U6bA" target="_blank">快讯｜北邮GAMMA LAB的五篇工作被KDD 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/yQ-TOQ0uP-SlFKM2Grhl_Q" target="_blank">交通数据挖掘与具身智能北京市重点实验室上半年CCF-A类学术论文成果速览</a>
     |
 <h4>2024</h4>
 <!-- network - A -->
