--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -230,7 +230,7 @@
     |
     <a href="" target="_blank">ECML-PKDD</a>
     |
-    <a href="" target="_blank">ICME</a>
+    <a href="https://attend.ieee.org/icme-2026/" target="_blank">ICME</a>
     |
     <a href="" target="_blank">ICMR</a>
     |
@@ -246,6 +246,54 @@
     |
 <!-- NLP -->
     <a href="https://lrec2026.info/" target="_blank">LREC</a>
+    |
+<!-- data mining - B-->     
+    <a href="" target="_blank">ICDM</a>
+    |
+    <a href="" target="_blank">CIKM</a>
+    |
+    <a href="" target="_blank">WSDM</a>
+    |
+    <a href="" target="_blank">ECAI</a>
+    |
+<!-- social computing - B-->
+    <a href="" target="_blank">ICWSM</a>
+    |
+<!-- uncertainty computing - B-->
+    <a href="" target="_blank">UAI</a>
+    |
+<!-- Service Computing - B-->
+    <a href="" target="_blank">ICWS</a>
+    |
+    <a href="" target="_blank">ICSOC</a>
+    |
+<!-- Computer-Human Interaction - B-->
+    <a href="" target="_blank">CSCW</a>
+    |
+<!-- software engineering - B-->
+    <a href="" target="_blank">DASFAA</a>
+    |
+    <a href="" target="_blank">ETAPS</a>
+    |
+    <a href="https://conf.researchr.org/home/saner-2026" target="_blank">SANER</a>
+    |
+    <a href="" target="_blank">ESEM</a>
+    |
+    <a href="" target="_blank">ISSRE</a>
+    |
+    <a href="" target="_blank">ICSME</a>
+    |  
+    <a href="" target="_blank">ICPC</a>
+    |
+    <a href="https://2026.refsq.org/" target="_blank">Requirements Engineering</a>
+    |
+    <a href="https://caise26.polimi.it/" target="_blank">CAiSE</a>
+    |
+<!-- Acoustics, Speech and Signal Processing - B-->
+    <a href="" target="_blank">ICASSP</a>
+    |
+<!-- Bioinformatics and Biomedicine - B-->
+    <a href="" target="_blank">BIBM</a>
     |
 <br/>
 
