--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -585,6 +585,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/yQ-TOQ0uP-SlFKM2Grhl_Q" target="_blank">交通数据挖掘与具身智能北京市重点实验室上半年CCF-A类学术论文成果速览</a>
     |
+    <a href="https://mp.weixin.qq.com/s/SIwSmuSsQHVlmDUWxGbH-w" target="_blank">ECML PKDD 2025 | 时空数据（Spatial-Temporal）论文总结</a>
+    |
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
