--- a/pages/publications.html
+++ b/pages/publications.html
@@ -108,9 +108,6 @@
     <li>Zhenhao Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zhichao Ma, and Fengyun Zhang, <a href="http://"><strong><font color= "#00066f">CodeSimGNet: Code Similarity Detection for Various Morphological Graph Structures using Graph Neural Networks</font></strong></a>. Arxiv 
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Hao Wang, <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>, <a href="http://"><strong><font color= "#00066f">Special Issue of Information Network Mining and Applications</font></strong></a>. Arxiv
-
-
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Protection Scenarios</font></strong></a>. Arxiv
 
 
@@ -141,16 +138,21 @@
 <!-- 2025 year -->
 <h4>2025</h4>
 <ol start="1">
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Hao Wang, <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>, <a href="http://"><strong><font color= "#00066f">Special Issue of Information Network Mining and Applications</font></strong></a>. Arxiv
+
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and Pingping Zhou, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. Under review
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Jianglin Dai, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and Pingping Zhou, <a href="http://"><strong><font color= "#00066f">AgriRE: Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
+    <li>Jianglin Dai, Sha Hu*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Evaluating Understanding and Relation Extraction Capability of Large Language Models: A Case Study on Chinese Agricultural-Aware Datasets</font></strong></a>. Under review
 
 
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-Adaptive Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. Arxiv
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*,  Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Hui Zhang, and Pingping Zhou, <a href="http://"><strong><font color= "#00066f">AgriRE: Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, Pingping Zhou, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-Adaptive Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. The 21st International Conference on Advanced Data Mining and Applications (<a href="https://adma2025.github.io/"><strong><u><font color="#874e26">ADMA-25</font></u></strong></a>). Kyoto, Japan, October 22nd-24th, 2025.
+
+
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Hui Zhang, Pingping Zhou, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. The 21st International Conference on Advanced Data Mining and Applications (<a href="https://adma2025.github.io/"><strong><u><font color="#874e26">ADMA-25</font></u></strong></a>). Kyoto, Japan, October 22nd-24th, 2025.
 </ol>
 
 
