--- a/pages/publications.html
+++ b/pages/publications.html
@@ -90,9 +90,6 @@
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https"><strong><font color= "#00066f">AgrDisEvaluator: A Benchmark for Evaluating Large Language Models on Chinese Agricultural-Centered Text Datasets</font></strong></a>. Arxiv
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 1.0: A Carbon-Assessed Agricultural Crop Knowledge Graph System and Its Applications</font></strong></a>. Arxiv
-        
-
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Xianming Zhang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Comprehensive Review of User Suicide Risk Detection from Social Media Data: Advance Methods, Resources, and Future Directions</font></strong></a>. Arxiv
 
@@ -109,6 +106,9 @@
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Protection Scenarios</font></strong></a>. Arxiv
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 1.0: A Carbon-Assessed Agricultural Knowledge Graph Management System and Its Applications</font></strong></a>. Arxiv
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
