--- a/pages/publications.html
+++ b/pages/publications.html
@@ -108,10 +108,10 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Protection Scenarios</font></strong></a>. Arxiv
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 1.0: A Carbon-Assessed Agricultural Knowledge Graph Management System and Its Applications</font></strong></a>. Arxiv
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 2.0: A Carbon-Assessed Agricultural Knowledge Graph Management System and Its Applications</font></strong></a>. Arxiv
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder 1.0: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
 </ol>
 
 
