--- a/pages/activities.html
+++ b/pages/activities.html
@@ -335,6 +335,10 @@
     <li><strong>Invited Reviewer</strong>, ACM Transactions on Knowledge Discovery from Data (<a href="https://dl.acm.org/journal/tkdd"><strong><u><font color="#874e26">ACM TKDD</font></u></strong></a>)</li>
 
 
+<!-- 2025.06.13 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Journal of Biomedical and Health Informatics (<a href="https://www.embs.org/jbhi/"><strong><u><font color="#874e26">JBHI</font></u></strong></a>)</li>
+
+
 <!-- 2025.01.20 收到审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Systems, Man and Cybernetics: Systems (<a href="https://ieeexplore.ieee.org/xpl/topics.jsp?punumber=6221021"><strong><u><font color="#874e26">IEEE TSMC-S</font></u></strong></a>)</li>
 
