--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -518,6 +518,8 @@
     |
     <a href="" target="_blank">ChineseCSCW</a>
     |
+    <a href="https://2025-eu.semantics.cc/" target="_blank">SEMANTiCS</a>
+    |
     <a href="" target="_blank">AKBC</a>
     |
     <a href="" target="_blank">IJCKG</a>
