--- a/pages/publications.html
+++ b/pages/publications.html
@@ -144,7 +144,7 @@
     <li>Yingnan Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Gengjie Jia, <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, and Yan Zhang, <a href="http://"><strong><font color= "#00066f">PerRec-Generator: An End-To-End Framework Fusing Historical User Preferences for Personalized Recipe Generation with Advanced Decoder Design and Supervised Contrastive Learning</font></strong></a>. Under review
 
 
-    <li>Jianglin Dai, Sha Hu*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Agri-RelExIns: A Comprehensive Instruction Dataset for Agricultural-Aware Relation Extraction</font></strong></a>. Under review
+    <li>Jianglin Dai, Sha Hu*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Agri-RelExIns: A Comprehensive Schema-Based Instruction Dataset for Agricultural-Aware Relation Extraction</font></strong></a>. Under review
 
 
     <li>Sha Hu, Jianglin Dai, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Evaluating Understanding and Relation Extraction Capability of Large Language Models: A Case Study on Chinese Agricultural-Aware Datasets</font></strong></a>. Under review
