--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -589,6 +589,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/SIwSmuSsQHVlmDUWxGbH-w" target="_blank">ECML PKDD 2025 | 时空数据（Spatial-Temporal）论文总结</a>
     |
+    <a href="https://mp.weixin.qq.com/s/s-hy4Q4eUor4kYJq_2_abQ" target="_blank">ECML PKDD 2025 | 实验室四篇论文被 NLPCC 2025 录用</a>
+    |
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
