--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The 32nd International Conference on MultiMedia Modeling (<a href="https://mmm2026.cz/"><strong><u><font color="#874e26">MMM 2026</font></u></strong></a>), Prague, Czech Republic, January 29th-31st, 2026</li>
+
+
     <li><strong>PC Member</strong>, The 19th China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2025/"><strong><u><font color="#874e26">CCKS 2025</font></u></strong></a>), Fuzhou, China, September 19th-21st, 2025</li>
 
 
@@ -396,6 +399,10 @@
 
 
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
+
+
+<!-- 2025.08.12 收到的审稿邀请 -->  
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Computational Social Systems (<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6570650"><strong><u><font color="#874e26">IEEE CSS</font></u></strong></a>)</li>
 
 
 <!-- 2025.04.19 收到的审稿邀请 -->  
