--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -6621,6 +6621,12 @@ Smart City Field：
     |
   <br />
   <br />
+AI Agent Field：
+<br />
+    <a href="https://mp.weixin.qq.com/s/KPWILVGNtVQDtEuCNQ5SMw" target="_blank">Xiao Xue</a>
+    |
+  <br />
+  <br />
 </body></html>
 
 
