--- a/pages/publications.html
+++ b/pages/publications.html
@@ -146,7 +146,7 @@
 
     <li>Sha Hu, Jianglin Dai, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Evaluating Understanding and Relation Extraction Capability of Large Language Models: A Case Study on Chinese Agricultural-Aware Datasets</font></strong></a>. Under review
 
-        
+
     <li>Jianglin Dai, Sha Hu*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="http://"><strong><font color= "#00066f">Agri-RelExIns: A Comprehensive Schema-Based Instruction Dataset for Agricultural-Aware Relation Extraction</font></strong></a>. Under review
 
 
@@ -171,7 +171,8 @@
     <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xin Hu, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, and <a href="" target="_blank">WupengNjust</a>, <a href="https://aclanthology.org/2025.findings-acl.315/"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> The 63th Annual Meeting of the Association for Computional Linguistics (<a href="https://2025.aclweb.org/"><strong><u><font color="#874e26">Findings of ACL-25</font></u></strong></a>). Vienna, Austria, July 27th-August 1st, 2025.
 
 
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025. (Best Paper Award)
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="https://cs.gzu.edu.cn/2021/1210/c17588a163794/page.htm" target="_blank">Yongbin Qin</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025. (Best Paper Award)
+
 
     <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
     <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
