--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -295,6 +295,15 @@
 <!-- Bioinformatics and Biomedicine - B-->
     <a href="" target="_blank">BIBM</a>
     |
+<!-- Neural network - C--> 
+    <a href="" target="_blank">ICONIP</a>
+    |
+    <a href="https://ksem2026.rosc.org.cn/" target="_blank">KSEM</a>
+    |
+    <a href="" target="_blank">ESWC</a>
+    |
+    <a href="https://pricai.org/2025/index.php" target="_blank">PRICAI</a>
+    |
 <br/>
 
 <h4>2025</h4>
