--- a/pages/publications.html
+++ b/pages/publications.html
@@ -141,6 +141,9 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Hao Wang, <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>, <a href="http://"><strong><font color= "#00066f">Special Issue of Information Network Mining and Applications</font></strong></a>. Arxiv
 
 
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">Enhancing User Suicide Risk Detection by Modeling Effects of Emotional Arousal in Short- and Long-Term Expressions in Their Posts</font></strong></a>. Under review
+
+
     <li>Yingnan Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Gengjie Jia, <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, and Yan Zhang, <a href="http://"><strong><font color= "#00066f">PerRec-Generator: An End-To-End Framework Fusing Historical User Preferences for Personalized Recipe Generation with Advanced Decoder Design and Supervised Contrastive Learning</font></strong></a>. Under review
 
 
