--- a/pages/activities.html
+++ b/pages/activities.html
@@ -190,6 +190,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 32nd International Conference on MultiMedia Modeling (<a href="https://mmm2026.cz/"><strong><u><font color="#874e26">MMM 2026</font></u></strong></a>), Prague, Czech Republic, January 29th-31st, 2026</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 19th China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2025/"><strong><u><font color="#874e26">CCKS 2025</font></u></strong></a>), Fuzhou, China, September 19th-21st, 2025</li>
 
 
