--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -197,7 +197,7 @@
     <a href="" target="_blank">IJCAI</a>
     |
 <!-- Hybrid - A -->
-    <a href="" target="_blank">The Web Conference</a>
+    <a href="https://www2026.thewebconf.org/" target="_blank">The Web Conference</a>
     |
 <!-- IR - A-->
     <a href="" target="_blank">SIGIR</a>
@@ -597,6 +597,8 @@
     <a href="https://mp.weixin.qq.com/s/yQ-TOQ0uP-SlFKM2Grhl_Q" target="_blank">交通数据挖掘与具身智能北京市重点实验室上半年CCF-A类学术论文成果速览</a>
     |
     <a href="https://mp.weixin.qq.com/s/SIwSmuSsQHVlmDUWxGbH-w" target="_blank">ECML PKDD 2025 | 时空数据（Spatial-Temporal）论文总结</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-ai0ulxsdpAIAtyM1EVs5Q" target="_blank">AML Lab 10 篇论文被国际学术会议CIKM 2025 录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/s-hy4Q4eUor4kYJq_2_abQ" target="_blank">ECML PKDD 2025 | 实验室四篇论文被 NLPCC 2025 录用</a>
     |
@@ -6633,6 +6635,12 @@ Smart City Field：
 AI Agent Field：
 <br />
     <a href="https://mp.weixin.qq.com/s/KPWILVGNtVQDtEuCNQ5SMw" target="_blank">Xiao Xue</a>
+    |
+  <br />
+  <br />
+News Computation Field：
+<br />
+    <a href="https://sjic.hust.edu.cn/info/1168/8606.htm" target="_blank">Xiao Xue</a>
     |
   <br />
   <br />
