--- a/pages/activities.html
+++ b/pages/activities.html
@@ -384,6 +384,10 @@
     <li><strong>Invited Reviewer</strong>, Engineering Applications of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/engineering-applications-of-artificial-intelligence"><strong><u><font color="#874e26">EAAI</font></u></strong></a>)</li>
 
 
+<!-- 2025.08.19 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Engineering Science and Technology, an International Journal (<a href="https://www.sciencedirect.com/journal/engineering-science-and-technology-an-international-journal"><strong><u><font color="#874e26">JESTECH</font></u></strong></a>)</li>
+ 
+
     <li><strong>Invited Reviewer</strong>, Information Processing and Management (<a href="https://www.sciencedirect.com/journal/information-processing-and-management"><strong><u><font color="#874e26">IPM</font></u></strong></a>)</li>
 
 
