--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -600,7 +600,19 @@
     |
     <a href="https://mp.weixin.qq.com/s/-ai0ulxsdpAIAtyM1EVs5Q" target="_blank">AML Lab 10 篇论文被国际学术会议CIKM 2025 录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/cRlsPwdOurBDrot3b1cyGw" target="_blank">新闻 | 实验室多篇新文章被EMNLP、ACM MM、Nature 子刊等录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/1pSfmIDEnPVZg3u3OwSWLQ" target="_blank">复旦大学数据智能与社会计算实验室3篇论文被EMNLP 2025 录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/v7mnjf1lHx9ADigA4PSVkQ" target="_blank">新闻 | 我组论文被自然语言处理领域顶会EMNLP 2025主会录用</a>
+    |
+    <a href="https://sai.jlu.edu.cn/info/1034/5164.htm" target="_blank">吉林大学人工智能学院11篇论文被EMNLP-2025接收</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8CoLnK2-gPmpqOxWitrLng" target="_blank">哈工大SCIR 22篇长文被EMNLP 2025主会/Findings录用</a>
+    |
     <a href="https://mp.weixin.qq.com/s/s-hy4Q4eUor4kYJq_2_abQ" target="_blank">ECML PKDD 2025 | 实验室四篇论文被 NLPCC 2025 录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vDyqRccp9svA3JIWZDw_sg" target="_blank">NLPCC 2025 Outstanding Paper 丨 FinTeam：让金融智能体像投研团队一样协作</a>
     |
 <h4>2024</h4>
 <!-- network - A -->
