--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -437,7 +437,9 @@
     |
     <a href="https://apweb2025.sau.edu.cn/" target="_blank">APWeb-WAIM</a>
     |
-<!-- NLP - C-->    
+<!-- NLP - C--> 
+    <a href="https://2025.aaclnet.org/" target="_blank">IJCNLP-AACL</a>
+    |      
     <a href="http://tcci.ccf.org.cn/conference/2025/" target="_blank">NLPCC</a>
     |
 <!-- CV -->
