--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -257,7 +257,7 @@
     <a href="" target="_blank">ECAI</a>
     |
 <!-- social computing - B-->
-    <a href="" target="_blank">ICWSM</a>
+    <a href="https://www.icwsm.org/2026/" target="_blank">ICWSM</a>
     |
 <!-- uncertainty computing - B-->
     <a href="" target="_blank">UAI</a>
@@ -6625,6 +6625,8 @@ Food Computation Field：
     <a href="http://tianyijun.com/" target="_blank">Yijun Tian</a>
     |
     <a href="https://sites.google.com/site/diyali916/" target="_blank">Diya Li</a>
+    |
+    <a href="https://www.fst.nus.edu.sg/our_people/faculty-members/zhang-dachuan/" target="_blank">Dachuan Zhang</a>
     |
   <br />
   <br />
