--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -610,6 +610,8 @@
     |
     <a href="https://sai.jlu.edu.cn/info/1034/5164.htm" target="_blank">吉林大学人工智能学院11篇论文被EMNLP-2025接收</a>
     |
+    <a href="https://mp.weixin.qq.com/s/V8cq4AocnanJ4D2rRV839g" target="_blank">研究团队六篇长文获EMNLP 2025国际会议录用</a>
+    |
     <a href="https://mp.weixin.qq.com/s/8CoLnK2-gPmpqOxWitrLng" target="_blank">哈工大SCIR 22篇长文被EMNLP 2025主会/Findings录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/s-hy4Q4eUor4kYJq_2_abQ" target="_blank">ECML PKDD 2025 | 实验室四篇论文被 NLPCC 2025 录用</a>
