--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,12 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The 31st International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2026.github.io"><strong><u><font color="#874e26">DASFAA 2026</font></u></strong></a>), Jeju, Korea, April 27th-30th, 2026</li>
+
+    
+    <li><strong>PC Member</strong>, The 30th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2026.org/"><strong><u><font color="#874e26">PAKDD 2026</font></u></strong></a>), Hong Kong SAR, China, June 9th-12th, 2026</li>
+
+
     <li><strong>PC Member</strong>, The 32nd International Conference on MultiMedia Modeling (<a href="https://mmm2026.cz/"><strong><u><font color="#874e26">MMM 2026</font></u></strong></a>), Prague, Czech Republic, January 29th-31st, 2026</li>
 
 
@@ -190,6 +196,12 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 31st International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2026.github.io"><strong><u><font color="#874e26">DASFAA 2026</font></u></strong></a>), Jeju, Korea, April 27th-30th, 2026</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The 30th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2026.org/"><strong><u><font color="#874e26">PAKDD 2026</font></u></strong></a>), Hong Kong SAR, China, June 9th-12th, 2026</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 32nd International Conference on MultiMedia Modeling (<a href="https://mmm2026.cz/"><strong><u><font color="#874e26">MMM 2026</font></u></strong></a>), Prague, Czech Republic, January 29th-31st, 2026</li>
 
 
