--- a/pages/activities.html
+++ b/pages/activities.html
@@ -361,6 +361,10 @@
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Systems, Man and Cybernetics: Systems (<a href="https://ieeexplore.ieee.org/xpl/topics.jsp?punumber=6221021"><strong><u><font color="#874e26">IEEE TSMC-S</font></u></strong></a>)</li>
 
 
+<!-- 2025.10.05 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Big Data (<a href="https://xplorestaging.ieee.org/xpl/issues?punumber=6687317&isnumber=11149634"><strong><u><font color="#874e26">IEEE BD</font></u></strong></a>)</li>
+
+
 <!-- 2025.03.06 收到审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Consumer Electronics (<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=30"><strong><u><font color="#874e26">IEEE CE</font></u></strong></a>)</li>
 
