--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The Web Conference 2026 Demo Track (<a href="https://www2026.thewebconf.org/calls/demos.html"><strong><u><font color="#874e26">WWW 2026 Demo Track</font></u></strong></a>), Dubai, United Arab Emirates, April 13th-17th, 2026</li>
+
+
     <li><strong>PC Member</strong>, The 31st International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2026.github.io"><strong><u><font color="#874e26">DASFAA 2026</font></u></strong></a>), Jeju, Korea, April 27th-30th, 2026</li>
 
     
@@ -196,6 +199,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The Web Conference 2026 Demo Track (<a href="https://www2026.thewebconf.org/calls/demos.html"><strong><u><font color="#874e26">WWW 2026 Demo Track</font></u></strong></a>), Dubai, United Arab Emirates, April 13th-17th, 2026</li>
+
+    
     <li><strong>Invited Reviewer</strong>, The 31st International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2026.github.io"><strong><u><font color="#874e26">DASFAA 2026</font></u></strong></a>), Jeju, Korea, April 27th-30th, 2026</li>
 
 
