--- a/pages/publications.html
+++ b/pages/publications.html
@@ -156,6 +156,11 @@
     <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*,  Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Hui Zhang, and Pingping Zhou, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
+
+    <li>Zhuping Ding, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiran Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, <a href="http://"><strong><font color= "#00066f">A Deep Emotional Context Model with Global Representation and Emotion-Consistency for Suicide Risk Detection</font></strong></a>. 2025 IEEE International Conference on Big Data (<a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/"><strong><u><font color="#874e26">IEEE Bigdata-25</font></u></strong></a>). Macau SAR, China, December 8th-11st, 2025.
+
+
+
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. The 8th International Workshop on Knowledge Graph Management and Applications (<a href="https://kgma-con.github.io/KGMA2025/"><strong><u><font color="#874e26">KGMA-25</font></u></strong></a>). Shenyang, China, August 28th, 2025.
 
 
