--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -300,7 +300,7 @@
     |
     <a href="https://ksem2026.rosc.org.cn/" target="_blank">KSEM</a>
     |
-    <a href="" target="_blank">ESWC</a>
+    <a href="https://2026.eswc-conferences.org/" target="_blank">ESWC</a>
     |
     <a href="https://pricai.org/2025/index.php" target="_blank">PRICAI</a>
     |
@@ -614,10 +614,19 @@
     |
     <a href="https://mp.weixin.qq.com/s/8CoLnK2-gPmpqOxWitrLng" target="_blank">哈工大SCIR 22篇长文被EMNLP 2025主会/Findings录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/Wr53OJC73qM9eOkaz542Ig" target="_blank">新闻 | 天津大学自然语言处理实验室2篇论文被EMNLP 2025 Industry Track接受！</a>
+    |
     <a href="https://mp.weixin.qq.com/s/s-hy4Q4eUor4kYJq_2_abQ" target="_blank">ECML PKDD 2025 | 实验室四篇论文被 NLPCC 2025 录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/vDyqRccp9svA3JIWZDw_sg" target="_blank">NLPCC 2025 Outstanding Paper 丨 FinTeam：让金融智能体像投研团队一样协作</a>
     |
+    <a href="https://mp.weixin.qq.com/s/FsXvoo83UynkPD9kxli5Qg" target="_blank">新闻｜我组 12 篇论文被 NeurIPS 2025 录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/fQITOXYBYOKyI9sYDnr5qw" target="_blank">知识工场实验室多篇论文被 ICML、MM、TOSEM、TSE、CIKM等会议或期刊录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RVmP_lmVSqIgVgvHoIabBw" target="_blank">EMNLP 2025奖项公布：CIPS计算语言学专业委员会专委获杰出论文奖和SAC Highlights奖</a>
+    |
+
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
