--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -183,6 +183,8 @@
     border-left: 5px solid #0084f2;">Accepted Top-tier Papers</h3>
 
 <br />
+<h4>2028</h4>
+<br/>
 <h4>2027</h4>
 <br/>
 
@@ -224,7 +226,7 @@
     |
     <a href="" target="_blank">NAACL</a>
     |   
-    <a href="" target="_blank">ISWC</a>
+    <a href="https://iswc2026.semanticweb.org/#/" target="_blank">ISWC</a>
     |
     <a href="" target="_blank">COLING</a>
     |
@@ -305,6 +307,8 @@
     <a href="https://pricai.org/2025/index.php" target="_blank">PRICAI</a>
     |
 <br/>
+    <a href="https://mp.weixin.qq.com/s/pgVGV-5PKGVEnhPJzu3M9A" target="_blank">知识工场多篇论文被AAAI 2026录用</a>
+    | 
 
 <h4>2025</h4>
 <!-- network - A -->
