--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -234,7 +234,7 @@
     |
     <a href="https://attend.ieee.org/icme-2026/" target="_blank">ICME</a>
     |
-    <a href="" target="_blank">ICMR</a>
+    <a href="https://icmr2026.org/" target="_blank">ICMR</a>
     |
     <a href="https://attend.ieee.org/wcci-2026/" target="_blank">IJCNN</a>
     |
