--- a/pages/activities.html
+++ b/pages/activities.html
@@ -199,6 +199,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, IEEE International Conference on Multimedia & Expo 2026 (<a href="https://2026.ieeeicme.org/"><strong><u><font color="#874e26">ICME 2026</font></u></strong></a>), Bangkok, Thailand, July 5th-9th, 2026</li>
+
+
     <li><strong>Invited Reviewer</strong>, The Web Conference 2026 Demo Track (<a href="https://www2026.thewebconf.org/calls/demos.html"><strong><u><font color="#874e26">WWW 2026 Demo Track</font></u></strong></a>), Dubai, United Arab Emirates, April 13th-17th, 2026</li>
 
     
@@ -447,6 +450,10 @@
 
 
     <li><strong>Invited Reviewer</strong>, IEEE Access (<a href="https://ieeeaccess.ieee.org/"><strong><u><font color="#874e26">IEEE Access</font></u></strong></a>)</li>
+
+
+<!-- 2025.10.29 收到的审稿邀请 --> 
+    <li><strong>Invited Reviewer</strong>, IEEE Open Journal of Engineering in Medicine and Biology (<a href="https://xplorestaging.ieee.org/xpl/mostRecentIssue.jsp?punumber=8782705"><strong><u><font color="#874e26">OJEMB</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, Applied Sciences (<a href="https://www.mdpi.com/journal/applsci"><strong><u><font color="#874e26">AS</font></u></strong></a>)</li>
