--- a/pages/activities.html
+++ b/pages/activities.html
@@ -350,6 +350,10 @@
     </li>
 
 
+<!-- 2025.12.12 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Neural Networks and Learning Systems (<a href="https://cis.ieee.org/publications/t-neural-networks-and-learning-systems"><strong><u><font color="#874e26">TNNLS</font></u></strong></a>)</li>
+
+
 <!-- 2025.07.21 收到审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, IEEE Transactions on Artificial Intelligence (<a href="https://cis.ieee.org/publications/ieee-transactions-on-artificial-intelligence"><strong><u><font color="#874e26">IEEE AI</font></u></strong></a>)</li>
 
