--- a/pages/activities.html
+++ b/pages/activities.html
@@ -431,6 +431,10 @@
     <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
 
 
+<!-- 2025.12.26 收到的审稿邀请 --> 
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Emerging Topics in Computational Intelligence (<a href="https://cis.ieee.org/publications/t-emerging-topics-in-ci"><strong><u><font color="#874e26">IEEE-ETCI</font></u></strong></a>)</li>
+
+
 <!-- 2025.03.22 收到的审稿邀请 -->  
     <li><strong>Invited Reviewer</strong>, Future Generation Computer Systems (<a href="https://www.sciencedirect.com/journal/future-generation-computer-systems"><strong><u><font color="#874e26">Future Generation Computer Systems</font></u></strong></a>)</li>
 
