--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+<!-- 2026.01.07 收到PC邀请 -->
+    <li><strong>PC Member</strong>, The 10th APWeb-WAIM Joint International Conference on Web and Big Data (<a href="https://conferences.sigappfr.org/APWEB2026/"><strong><u><font color="#874e26">APWeb-WAIM 2026</font></u></strong></a>), Danang, Vietnam, September 7th-9th, 2026</li>
+
     <li><strong>PC Member</strong>, The Web Conference 2026 Demo Track (<a href="https://www2026.thewebconf.org/calls/demos.html"><strong><u><font color="#874e26">WWW 2026 Demo Track</font></u></strong></a>), Dubai, United Arab Emirates, April 13th-17th, 2026</li>
 
 
@@ -199,6 +202,8 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 10th APWeb-WAIM Joint International Conference on Web and Big Data (<a href="https://conferences.sigappfr.org/APWEB2026/"><strong><u><font color="#874e26">APWeb-WAIM 2026</font></u></strong></a>), Danang, Vietnam, September 7th-9th, 2026</li>
+    
     <li><strong>Invited Reviewer</strong>, IEEE International Conference on Multimedia & Expo 2026 (<a href="https://2026.ieeeicme.org/"><strong><u><font color="#874e26">ICME 2026</font></u></strong></a>), Bangkok, Thailand, July 5th-9th, 2026</li>
 
 
