--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/uqddWNzaOo2-j9X8PKm32g" target="_blank">8个专委自办学术会议入选CCF高质量国际学术会议培育计划</a>
   |
+  <a href="https://www.cast.org.cn/xw/tzgg/ZH/art/2025/art_bbbba597531d4351bf3d5c7840e3a4e7.html" target="_blank">中国科协《重要学术会议目录（2025）》发布公告（含中国中文信息学会13个品牌会议）</a>
+  |
   <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录（2025）</a>
   |
   <a href="https://mp.weixin.qq.com/s/3MH0Rl1yfuxSWwyrCJsJYQ" target="_blank">T2| 《计算机教育》入选CCF高质量科技期刊分级目录</a>
