--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录（2025）</a>
   |
+  <a href="https://mp.weixin.qq.com/s/ZGlL51Nc8S0n_FAODMZkig" target="_blank">《仿真科学与技术领域高质量科技期刊分级目录（2025版）》</a>
+  |
   <a href="https://mp.weixin.qq.com/s/3MH0Rl1yfuxSWwyrCJsJYQ" target="_blank">T2| 《计算机教育》入选CCF高质量科技期刊分级目录</a>
   |
   <a href="https://mp.weixin.qq.com/s/6fBu6bt6Z7fgZDw-mhAM2w" target="_blank">CCF24场会议被中国科协《重要学术会议指南(2024)》收录</a>
